# AI_Data_Science_Pipeline

./: .env.example  .gitignore  .pre-commit-config.yaml  Agent_spec.md  Makefile  Project_spec.md  README.md  config.py  main.py  pyproject.toml  requirements.txt  verify_setup.py
agents/: __init__.py  base.py  data_cleaning.py  data_ingestion.py  data_profiling.py  evaluation.py  feature_engineering.py  feature_selection.py  modeling.py  orchestration.py  report_generation.py
memory/: __init__.py  memory_client.py  symbolic_store.py  vector_store.py
tests/integration/: test_full_pipeline.py
tests/unit/: test_feature_selection.py  test_llm_service.py  test_memory.py  test_modeling.py  test_orchestration.py
ui/: __init__.py  components.py
utils/: __init__.py  exceptions.py  feedback_processor.py  llm_service.py  logging.py
